Update internal_logs/index.html with new log entry

--- a/internal_logs/index.html
+++ b/internal_logs/index.html
@@ -1,1 +1,56 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>SERVER_LOG_77</title>
+    <style>
+        body {
+            background-color: #0a0a0a; /* Almost black */
+            color: #00ff41; /* Matrix Green */
+            font-family: "Consolas", "Monaco", monospace;
+            padding: 20px;
+            font-size: 14px;
+        }
+        a { color: #00ff41; text-decoration: underline; }
+        a:hover { background-color: #00ff41; color: #000; }
+        .alert { color: red; font-weight: bold; }
+        .timestamp { color: #555; }
+        hr { border-color: #333; border-style: dashed; }
+    </style>
+</head>
+<body>
 
+<pre>
+CONNECTED TO: BACKUP_SERVER_02
+USER: SAM_PRODUCER
+STATUS: <span class="alert">COMPROMISED</span>
+--------------------------------------------------
+</pre>
+
+<p><strong>> OPENING LATEST ENTRY...</strong></p>
+
+<p><span class="timestamp">[NOV 21 - 03:42 AM]</span></p>
+<p>I don't know how Alex changed the main website text. I locked him out of the admin panel yesterday. I checked the Git logs—the changes came from <em>inside</em> the server. The IP address listed is 0.0.0.0.</p>
+
+<p>He keeps talking about "The Guide." He says Page 88 has instructions on how to "open the throat."</p>
+
+<p>I managed to recover one audio file before he wiped the drive. It's raw. You can hear the second voice.</p>
+
+<p>> <a href="#">DOWNLOAD_AUDIO_RECOVERY_04.WAV</a> (Corrupted)</p>
+
+<hr>
+
+<p><strong>> SYSTEM ALERTS:</strong></p>
+<ul>
+    <li>Attempted login from "Guest" (FAILED)</li>
+    <li>Attempted login from "Guest" (FAILED)</li>
+    <li>Attempted login from "Guest" (SUCCESS)</li>
+</ul>
+
+<p class="alert">WARNING: "Guest" has elevated privileges.</p>
+
+<br>
+<p>> <a href="../index.html">RETURN TO MAIN SITE (UNSAFE)</a></p>
+
+</body>
+</html>
